--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <link rel="stylesheet" href="css/themes/app4.themes.min.css"/>
 <link rel="stylesheet" href="css/jquery.mobile.structure-1.4.5.min.css"/>
 
-<!--grupo JavaScript-->
+<!--grupo JS-->
 <script src="js/jquery-1.11.1.min.js"></script>
 <script src="js/jquery.mobile-1.4.5.min.js"></script>
 <script src="phonegap.js"></script>
 
-<!----Menu lateral---->
+<!----Menu Lateral--->
 <link rel="stylesheet" href="css/sldr.css">
 <link rel="stylesheet" href="css/style.css">
 <script src="js/jsplug.js"></script>
@@ -81,10 +81,10 @@ function MM_swapImage() { //v3.0
 
 <div class="main-content">
 <div class="swipe-area"></div>
-<a href='#' data-toggle=".container" id="sidebar-toggle">
-<span class="bar"</span>
-<span class="bar"</span>
-<span class="bar"</span>
+<a href="#" data-toggle=".container" id="sidebar-toggle">
+<span class="bar"></span>
+<span class="bar"></span>
+<span class="bar"></span>
 </a>
 </div>
 </div>
@@ -152,8 +152,10 @@ function MM_swapImage() { //v3.0
 <img src="imagenes/descarga (2).jpg" width="70%" height="70%"/>
 <p>
 La Tierra y sus ecosistemas son nuestro hogar. Para alcanzar un justo equilibrio entre las necesidades económicas, sociales y ambientales de las generaciones presentes y futuras, es necesario promover la armonía con la naturaleza y el planeta.</p>
+<img src="imagenes/descarga (3).jpg" width="70%" height="70%"/>
 <p>
 Celebramos el Día Internacional de la Madre Tierra para recordar que el planeta y sus ecosistemas nos dan la vida y el sustento. Con este día, asumimos, además, la responsabilidad colectiva, como nos recordaba la Declaración de Río de 1992, de fomentar esta armonía con la naturaleza y la Madre Tierra.</p>
+<img src="imagenes/images (4).jpg" width="70%" height="70%"/>
 <p>
 Este día nos brinda también la oportunidad de concienciar a todos los habitantes del planeta acerca de los problemas que afectan a la Tierra y a las diferentes formas de vida que en él se desarrollan.</p>
 
@@ -172,7 +174,7 @@ Este día nos brinda también la oportunidad de concienciar a todos los habitant
 </center>
 <div data-role="footer" align="center" data-theme="c" data-position="fixed">
 <div>
-<h4>Nombre del alumno</h4> <img src="res/android/mdpi.png" width="46" height="46">
+<h4>Carina Martinez</h4> <img src="res/android/mdpi.png" width="46" height="46">
 </div>
 </div>
 </div> 
@@ -186,22 +188,29 @@ Este día nos brinda también la oportunidad de concienciar a todos los habitant
 <div data-role="main" class="ui-content">
 <p>
 "A medida que nos industrializamos, nuestras cadenas de abastecimiento se van haciendo menos transparentes, por lo que las consecuencias de nuestras acciones sobre el medio ambiente son más difíciles de entender” señaló.</p>
+<img src="imagenes/images (6).jpg" width="70%" height="70%"/>
 <p>
 La plataforma del Día de la Tierra quiere que este día no se celebre solo durante una joranda, si no que el compromiso se extienda todo el año.
 “Poética y moralmente, plantar un árbol requiere atención durante mucho tiempo, no se trata solo de plantarlo en el suelo” dijo Rogers.</p>
+<img src="imagenes/images (9).jpg" width="70%" height="70%"/>
 <p>
 Para ayudar a hacer la transición hacia un mundo bajo en carbono, la organización colabora con cien mil escuelas de todo el mundo y forma parte de proyectos ambientales durante todo el año.</p>
+<img src="imagenes/images (11).jpg" width="70%" height="70%"/>
 <p>
 Cassara dijo que su organización emplea el Día de la Tierra para tratar de involucrar a los líderes políticos en el movimiento ecologista.</p>
+<img src="imagenes/images (10).jpg" width="70%" height="70%"/>
 <p>
 "El Día de la Tierra no crea conciencia entre el público de la misma manera que solía hacerlo. Pero todavía proporciona un punto de referencia para la reflexión entre aquellos que nos encontramos dentro de la comunidad del medio ambiente", dijo.</p>
+<img src="imagenes/a/images (5).jpg" width="70%" height="70%"/>
 <p>
 Rogers anima a establecer  un compromiso público para realizar una acción relacionada con el medio ambiente a todos aquellas personas implicadas con el medio ambiente el próximo 22 de abril.</p>
+<img src="imagenes/a/images (6).jpg" width="70%" height="70%"/>
 <p>
 Comprometerse con las ideas promovidas desde la plataforma Día de la Tierra supone educar a los amigos y familiares sobre el calentamiento global o comprar productos ecológicos como bombillas de bajo consumo.</p>
+<img src="imagenes/a/22abril-web.jpg" width="70%" height="70%"/>
 <p>
 El compromiso es la máxima de la iniciativa que se prolonga durante todo el año, "La Generación Verde", que nos ha llevado a una nueva convocatoria del Día de la Tierra en 2018.</p>
-
+<img src="imagenes/a/images (12).jpg" width="70%" height="70%"/>
 </div>
 </center>
 <div data-role="main" class="ui-content" align="center">
@@ -228,12 +237,16 @@ El compromiso es la máxima de la iniciativa que se prolonga durante todo el añ
 <h1>La tierra que habitamos</h1>
 <p>
 «Madre Tierra» es una expresión común utilizada para referirse al Planeta Tierra en diversos países y regiones, lo que demuestra la interdependencia existente entre los seres humanos, las demás especies vivas y el planeta que todos habitamos.</p>
+<img src="imagenes/a/pngtree-world-health-day-earth-earpiece-earth-health-day-earth-auscultation-png-image_338203.jpg" width="70%" height="70%"/>
 <p>
 La Tierra y sus ecosistemas son nuestro hogar. Para alcanzar un justo equilibrio entre las necesidades económicas, sociales y ambientales de las generaciones presentes y futuras, es necesario promover la armonía con la naturaleza y el planeta.</p>
+<img src="imagenes/a/images (10).jpg" width="70%" height="70%"/>
 <p>
 Celebramos el Día Internacional de la Madre Tierra para recordar que el planeta y sus ecosistemas nos dan la vida y el sustento. Con este día, asumimos, además, la responsabilidad colectiva, como nos recordaba la Declaración de Río de 1992, de fomentar esta armonía con la naturaleza y la Madre Tierra.</p>
+<img src="imagenes/a/images (8).jpg" width="70%" height="70%"/>
 <p>
 Este día nos brinda también la oportunidad de concienciar a todos los habitantes del planeta acerca de los problemas que afectan a la Tierra y a las diferentes formas de vida que en él se desarrollan.</p>
+<img src="imagenes/a/descarga.jpg" width="70%" height="70%"/>
 </div>
 <center>
 <div data-role="main" class="ui-content">
@@ -265,14 +278,19 @@ Este día nos brinda también la oportunidad de concienciar a todos los habitant
 <h1>Dialogos sobre armonia</h1>
 <p>
 El 23 de abril de 2018 se realizó en la sede de las Naciones Unidas en Nueva York, el 8° Diálogo Interactivo sobre Armonía con la Naturaleza, en ocasión de la conmemoración del Día Internacional de la Madre Tierra.</p>
+<img src="imagenes/aaaaaaaaaa.jpg" width="70%" height="70%"/>
 <p>
 El evento fue convenido por el Presidente de la Asamblea General, Miroslav Lajcak, quien destacó la importancia del Diálogo para intercambiar ideas sobre desarrollo y patrones de producción y consumo sostenibles en armonía con la naturaleza.</p>
+<img src="imagenes/descarga.jpg" width="70%" height="70%"/>
 <p>
 Durante la jornada, se discutió sobre cómo los marcos legales y económicos de la Jurisprudencia de la Tierra impactan la implementación de patrones de producción y consumo sostenibles en Armonía con la Naturaleza.</p>
+<img src="imagenes/images (9).jpg" width="70%" height="70%"/>
 <p>
 El Diálogo se realizó con el objetivo de inspirar a los ciudadanos y las sociedades a reconsiderar la relación que mantienen con la naturaleza, acorde a la meta 12.8 de los Objetivos de Desarrollo Sostenible con respecto a los patrones de consumo y producción sostenibles.</p>
+<img src="imagenes/images (6).jpg" width="70%" height="70%"/>
 <p>
 Mejorar la base ética de la relación entre la especie humana y la Tierra en el contexto del desarrollo sostenible no es solo beneficioso, sino también necesario.</p>
+<img src="imagenes/el-dia-de-la-tierra-2015-22-de-abril-600x405.jpg" width="70%" height="70%"/>
 
 </div>
 <center>
@@ -305,8 +323,10 @@ Mejorar la base ética de la relación entre la especie humana y la Tierra en el
 <h1>Hacia una tierra sostenible</h1>
 <p>
 El paquete de medidas estratégicas diseñado por el quinteto de organizaciones ecologistas está compuesto por 17 demandas que abarcan medidas transversales que trascienden el medioambiente y van más allá con el fin de facilitar la transformación de todo el sistema.</p>
+<img src="imagenes/images (2).jpg" width="70%" height="70%"/>
 <p>
 En concreto, tal y como anunciaron los responsables de estas ONG durante la presentación de Un programa por la Tierra. Demandas para una legislatura sostenible, lo que defienden con estas 17 propuestas es lograr que la «sostenibilidad del modelo económico, las políticas centradas en la justicia social y ambiental y las medidas para generar un nuevo modelo de producción y consumo, con generación de empleo ligado al cuidado y mejora ambiental» marquen el camino en la nueva etapa política.</p>
+<img src="imagenes/descarga (1).jpg" width="70%" height="70%"/>
 
 </div>
 <center>
